--- a/final/submit.html
+++ b/final/submit.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="/styles/odessa.css">
     <script src="/scripts/contact.js" defer></script>
     <script src="/scripts/footer.js" defer></script>
+    <!--favicon-->
+    <link rel="icon" href="images/favicon.ico">    
 </head>
 <body>
     <header id="menu">
