--- a/final/home.html
+++ b/final/home.html
@@ -6,6 +6,13 @@
     <title>Odessa Restaurant - Silas Gomes</title>
     <meta name="description" content="WDD 231: Web Frontend Development - Silas Gomes - Project: This is the home page for a website of a restaurant. The project will contain 3 pages">
     <meta name="author"  content="silas gomes neto">
+    <!--facebook meta-->
+    <meta property="og:title" content="Odessa Restaurant">
+    <meta property="og:description" content="Welcome to Odessa, a culinary journey through [Cuisine Type]. Enjoy our handcrafted dishes, a cozy atmosphere, and an unforgettable dining experience. Perfect for any occasion.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/MagoPrismo/wdd231/refs/heads/main/val.png">
+    <meta property="og:url" content="https://magoprismo.github.io/wdd231/final/home.html">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
     <!---fonts-->
     <!-- Preload the fonts -->
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap">
@@ -23,6 +30,8 @@
     <!--js and css-->
     <link rel="stylesheet" href="styles/odessa.css">
     <script src="/scripts/footer.js" defer></script>
+    <!--favicon-->
+    <link rel="icon" href="images/favicon.ico">
 </head>
 <body>
     <header>
