--- a/final/menu.html
+++ b/final/menu.html
@@ -6,6 +6,13 @@
     <title>Odessa Restaurant - Silas Gomes</title>
     <meta name="description" content="WDD 231: Web Frontend Development - Silas Gomes - Project: This is the menu page for a website of a restaurant. This page shows their offers and foods.">
     <meta name="author"  content="silas gomes neto">
+    <!--facebook meta-->
+    <meta property="og:title" content="Odessa Restaurant">
+    <meta property="og:description" content="Welcome to Odessa, a culinary journey through [Cuisine Type]. Enjoy our handcrafted dishes, a cozy atmosphere, and an unforgettable dining experience. Perfect for any occasion.">
+    <meta property="og:image" content="https://raw.githubusercontent.com/MagoPrismo/wdd231/refs/heads/main/final/images/logo.jpeg">
+    <meta property="og:url" content="https://magoprismo.github.io/wdd231/final/home.html">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
     <!---fonts-->
     <!-- Preload the fonts -->
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap">
