--- a/final/home.html
+++ b/final/home.html
@@ -9,7 +9,7 @@
     <!--facebook meta-->
     <meta property="og:title" content="Odessa Restaurant">
     <meta property="og:description" content="Welcome to Odessa, a culinary journey through [Cuisine Type]. Enjoy our handcrafted dishes, a cozy atmosphere, and an unforgettable dining experience. Perfect for any occasion.">
-    <meta property="og:image" content="https://raw.githubusercontent.com/MagoPrismo/wdd231/refs/heads/main/val.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/MagoPrismo/wdd231/refs/heads/main/final/images/logo.jpeg">
     <meta property="og:url" content="https://magoprismo.github.io/wdd231/final/home.html">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
