--- a/final/menu.html
+++ b/final/menu.html
@@ -62,6 +62,13 @@
         <div class="dishes">
 
         </div>
+        <div id="dishModal" class="modal-overlay">
+            <div class="modal-content">
+              <span class="close-button">&times;</span>
+              <h2 id="modal-dish-name"></h2>
+              <p id="modal-dish-description"></p>
+            </div>
+          </div>
     </main>
     <footer>
         <p id="foot">&copy; <span id="year"></span> | Silas Gomes | Brazil</p>
