--- a/final/menu.html
+++ b/final/menu.html
@@ -29,7 +29,7 @@
     </noscript>
     <!--js and css-->
     <link rel="stylesheet" href="styles/odessa.css">
-    <script src="/scripts/menu.js" defer></script>
+    <script type="module" src="/scripts/menu.js" defer></script>
     <script src="/scripts/footer.js" defer></script>
     <!--favicon-->
     <link rel="icon" href="images/favicon.ico">
