--- a/final/contact.html
+++ b/final/contact.html
@@ -135,6 +135,7 @@
     <footer>
         <p id="foot">&copy; <span id="year"></span> | Silas Gomes | Brazil</p>
         <p id="date">Last update:&nbsp;<span id="lastModified"></span></p>
+        <a id="video" href="https://youtu.be/Ju1A44pwC5w">Video</a>
     </footer>
     <script>
         document.getElementById("myForm").addEventListener("submit", function (e) {
