--- a/final/home.html
+++ b/final/home.html
@@ -49,6 +49,7 @@
     <footer>
         <p id="foot">&copy; <span id="year"></span> | Silas Gomes | Brazil</p>
         <p id="date">Last update:&nbsp;<span id="lastModified"></span></p>
+        <a id="video" href="https://youtu.be/Ju1A44pwC5w">Video</a>
     </footer>
 </body>
 </html>
