--- a/final/menu.html
+++ b/final/menu.html
@@ -29,7 +29,6 @@
     </noscript>
     <!--js and css-->
     <link rel="stylesheet" href="styles/odessa.css">
-    <script type="module" src="/scripts/menu.js" defer></script>
     <script src="/scripts/footer.js" defer></script>
     <!--favicon-->
     <link rel="icon" href="images/favicon.ico">
@@ -75,5 +74,6 @@
         <p id="date">Last update:&nbsp;<span id="lastModified"></span></p>
         <a id="video" href="https://youtu.be/Ju1A44pwC5w">Video</a>
     </footer>
+    <script type="module" src="/scripts/menu.js"></script>
 </body>
 </html>
