--- a/final/menu.html
+++ b/final/menu.html
@@ -29,7 +29,7 @@
     </noscript>
     <!--js and css-->
     <link rel="stylesheet" href="styles/odessa.css">
-    <script src="/scripts/footer.js" defer></script>
+    <script src="scripts/footer.js" defer></script>
     <!--favicon-->
     <link rel="icon" href="images/favicon.ico">
 </head>
@@ -74,7 +74,7 @@
         <p id="date">Last update:&nbsp;<span id="lastModified"></span></p>
         <a id="video" href="https://youtu.be/Ju1A44pwC5w">Video</a>
     </footer>
-    <script type="module" src="/scripts/menu.js"></script>
+    <script type="module" src="scripts/menu.js"></script>
 </body>
 </html>
 
