--- a/final/submit.html
+++ b/final/submit.html
@@ -28,9 +28,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap">
     </noscript>
     <!--js and css-->
-    <link rel="stylesheet" href="/styles/odessa.css">
-    <script src="/scripts/contact.js" defer></script>
-    <script src="/scripts/footer.js" defer></script>
+    <link rel="stylesheet" href="styles/odessa.css">
+    <script src="scripts/contact.js" defer></script>
+    <script src="scripts/footer.js" defer></script>
     <!--favicon-->
     <link rel="icon" href="images/favicon.ico">    
 </head>
